<resources>
    <string name="app_name">AnimEng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startText"> Привет! \nДавай начнём обучение!!</string>
    <string name="beginButton">Жми сюда \n(＾▽＾)</string>
    <string name="ex1">Переведи-ка :3 </string>
    <string name="ex2">Учимся по моментам из аниме</string>
    <string name="backButton">Назад</string>
    <string name="backToMain">Выход</string>
    <string name="wq1">Привет</string>
    <string name="right1">Hello</string>
    <string name="false1">Cut</string>
    <string name="false2">Pill</string>
    <string name="false3">Home</string>
    <string name="wq2">Сила</string>
    <string name="right2">Power</string>
    <string name="false4">Pet</string>
    <string name="false5">Page</string>
    <string name="false6">Patient</string>
    <string name="wq3">Герой</string>
    <string name="right3">Hair</string>
    <string name="false8">Heaven</string>
    <string name="false9">Hero</string>
    <string name="false7">Hand</string>
    <string name="wq4">Task</string>
    <string name="right4">Задание</string>
    <string name="false11">Здание</string>
    <string name="false10">Защита</string>
    <string name="false12">Завеса</string>
    <string name="wq5">Speed</string>
    <string name="right5">Скорость</string>
    <string name="false13">Смартфон</string>
    <string name="false14">Старт</string>
    <string name="false15">Свойство</string>
    <string name="rightpic1">Dream</string>
    <string name="falsepic1">Door</string>
    <string name="falsepic2">Dirt</string>
    <string name="falsepic3">Drink</string>
    <string name="rightpic2">Car</string>
    <string name="falsepic4">Cake</string>
    <string name="falsepic5">Cup</string>
    <string name="falsepic6">Cream</string>
    <string name="rightpic3">Glass</string>
    <string name="falsepic7">Gust</string>
    <string name="falsepic8">Guilty</string>
    <string name="falsepic9">Graduate</string>
    <string name="rightpic4">Ship</string>
    <string name="falsepic10">Salt</string>
    <string name="falsepic11">Sauce</string>
    <string name="falsepic12">Sale</string>
    <string name="rightpic5">Doctor</string>
    <string name="falsepic13">Door</string>
    <string name="falsepic14">Dorm</string>
    <string name="falsepic15">Dock</string>
    <string name="modulEnd">✰Поздравляю!✰\</string>
    <string name="modulEnd2">Держи монетку </string>
</resources>