<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Word_1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="498dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="208dp"
            android:text="@string/wq1"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="72dp"
            android:layout_marginTop="328dp"
            android:text="@string/false1"
            android:onClick="falseWord1Click"
            android:backgroundTint="@color/white"
            android:textColor="#009688"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="328dp"
            android:onClick="rightWordClick"
            android:text="@string/right1"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/white"
            android:textColor="#009688"
            app:layout_constraintStart_toEndOf="@+id/button12"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:onClick="falseWord2Click"
            android:backgroundTint="@color/white"
            android:textColor="#009688"
            android:text="@string/false2"
            app:layout_constraintStart_toStartOf="@+id/button12"
            app:layout_constraintTop_toBottomOf="@+id/button12" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:text="@string/false3"
            android:backgroundTint="@color/white"
            android:textColor="#009688"
            android:onClick="falseWord3Click"
            app:layout_constraintEnd_toEndOf="@+id/button13"
            app:layout_constraintTop_toBottomOf="@+id/button13" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>