<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChosePic_1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="601dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="300dp"
            android:layout_height="265dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/dream"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="120dp"
            android:text="@string/rightpic1"
            android:onClick="picright1"
            android:backgroundTint="@color/white"
            android:textColor="#009688"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="108dp"
            android:text="@string/falsepic1"
            android:onClick="falsepic1"
            app:layout_constraintEnd_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:backgroundTint="@color/white"
            android:textColor="#009688"/>

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/falsepic2"
            android:onClick="falsepic2"
            app:layout_constraintEnd_toStartOf="@+id/button11"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button6"
            app:layout_constraintTop_toBottomOf="@+id/button6"
            android:backgroundTint="@color/white"
            android:textColor="#009688"/>

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:onClick="falsepic3"
            android:text="@string/falsepic3"
            app:layout_constraintEnd_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button7"
            android:backgroundTint="@color/white"
            android:textColor="#009688"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>