<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChosePic_5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="601dp">

        <Button
            android:id="@+id/button24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/falsepic15"
            android:onClick="falsepic15"
            android:backgroundTint="@color/white"
            android:textColor="#009688"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />

        <Button
            android:id="@+id/button26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/falsepic14"
            android:onClick="falsepic14"
            android:backgroundTint="@color/white"
            android:textColor="#009688"
            app:layout_constraintStart_toStartOf="@+id/button24"
            app:layout_constraintTop_toBottomOf="@+id/button24" />

        <Button
            android:id="@+id/button27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="56dp"
            android:text="@string/falsepic13"
            android:onClick="falsepic13"
            android:backgroundTint="@color/white"
            android:textColor="#009688"
            app:layout_constraintEnd_toEndOf="@+id/button22"
            app:layout_constraintStart_toEndOf="@+id/button26"
            app:layout_constraintTop_toBottomOf="@+id/button22" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="300dp"
            android:layout_height="265dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/doctor"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"
            android:text="@string/rightpic5"
            android:onClick="picright5"
            android:backgroundTint="@color/white"
            android:textColor="#009688"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/button24"
            app:layout_constraintTop_toBottomOf="@+id/imageView6" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>