<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C7765"
    tools:context=".ExercisesActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="279dp"
        android:layout_height="83dp"
        android:layout_marginTop="324dp"
        android:backgroundTint="@color/white"
        android:textColor="#009688"
        android:onClick="modylOneOnClick"
        android:text="@string/ex1"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="279dp"
        android:layout_height="83dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/white"
        android:onClick="modylTwoOnClick"
        android:text="@string/ex2"
        android:textColor="#009688"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.009" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="69dp"
        android:layout_height="62dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#2C7765"
        android:foreground="@drawable/coini"
        android:foregroundGravity="fill"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="338dp"
        android:layout_height="190dp"
        android:layout_marginTop="96dp"
        android:backgroundTint="#009688"
        android:foreground="@drawable/h"
        android:scrollbarThumbHorizontal="@color/bb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/teal_200"
        android:textColor="#009688"
        android:onClick="backOnClick2"
        android:text="@string/backButton"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text=" "
        app:layout_constraintBottom_toTopOf="@+id/imageView5"
        app:layout_constraintEnd_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

</androidx.constraintlayout.widget.ConstraintLayout>